# ast-append-ids

./: .gitignore  README.md
cargo/ast-append-ids/: Cargo.toml  README.md  build.sh  index.d.ts  index.js  index.mjs  package.json
cargo/ast-append-ids/.cargo/: config.toml
cargo/ast-append-ids/src/: ast_common.rs  cli.rs  html.rs  id_generator.rs  jsx.rs  lib.rs  wasm.rs  xml.rs
cargo/ast-append-ids/tests/: integration_tests.rs
npm/: Makefile  README.md  jest.config.mjs  package.json  sync-deps.mjs  test-cli.mjs
npm/.changeset/: few-snails-strive.md  many-kids-stand.md  stale-clouds-design.md
npm/__specs__/: babel-plugin-jsx-append-ids.spec.md  rehype-append-ids.spec.md  xast-append-ids.spec.md
npm/__specs__/shared/: id-generator.spec.md
npm/test-output/: test.html  test.jsx  test.xml
